# internal/Core/domain/entities/client.go
@@ -6,7 +6,7 @@ type Client struct {
 	ID         int64
 	Name       string
 	Phone      string
-	Birthdate  time.Time
+	Birthdate  *time.Time
 	Contact    string
 	Created_at time.Time
 	School_id  string
